force-app/main/default/objects/Call_Center_Menu__c/Call_Center_Menu__c.object-meta.xml
<CustomObject>
    <label>Call Center - Menu</label>
    <nameField>
        <label>Menu Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Center - Menus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>