force-app/main/default/objects/Call_Center_Menu__c/fields/Option_1_3rd_Party_Transfer_DNIS__c.field-meta.xml
<CustomField>
    <fullName>Option_1_3rd_Party_Transfer_DNIS__c</fullName>
    <label>Option 1 3rd Party Transfer DNIS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>