force-app/main/default/objects/Call_Center_Menu__c/fields/Option_1_Caller_Need__c.field-meta.xml
<CustomField>
    <fullName>Option_1_Caller_Need__c</fullName>
    <label>Option 1 Caller Need</label>
    <length>200</length>
    <type>Text</type>
</CustomField>