force-app/main/default/objects/Call_Center_Menu__c/fields/Option_1_Skill__c.field-meta.xml
<CustomField>
    <fullName>Option_1_Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option 1 Skill</label>
    <referenceTo>Call_Center_Skill__c</referenceTo>
    <relationshipLabel>Call Center - Menus</relationshipLabel>
    <relationshipName>Option_1_Skill</relationshipName>
    <type>Lookup</type>
</CustomField>