force-app/main/default/objects/Call_Center_Menu__c/fields/Option_2_Skill__c.field-meta.xml
<CustomField>
    <fullName>Option_2_Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option 2 Skill</label>
    <referenceTo>Call_Center_Skill__c</referenceTo>
    <relationshipLabel>Call Center - Menus (Option 2 Skill)</relationshipLabel>
    <relationshipName>Option_2_Skill</relationshipName>
    <type>Lookup</type>
</CustomField>