force-app/main/default/objects/Call_Center_Menu__c/fields/Option_4_Queue_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Option_4_Queue_Treatment__c</fullName>
    <label>Option 4 Queue Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Call_Center_Queue_Treatments</valueSetName>
    </valueSet>
</CustomField>