force-app/main/default/objects/Call_Center_Menu__c/fields/Option_5_Menu__c.field-meta.xml
<CustomField>
    <fullName>Option_5_Menu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option 5 Menu</label>
    <referenceTo>Call_Center_Menu__c</referenceTo>
    <relationshipLabel>Call Center - Menus (Option 5 Menu)</relationshipLabel>
    <relationshipName>Option_5_Menu</relationshipName>
    <type>Lookup</type>
</CustomField>