force-app/main/default/objects/Call_Center_Menu__c/fields/Option_8_Destination_Type__c.field-meta.xml
<CustomField>
    <fullName>Option_8_Destination_Type__c</fullName>
    <label>Option 8 Destination Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Call_Center_Destination_Type</valueSetName>
    </valueSet>
</CustomField>